--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,6 @@ body {
     width: 100%;
 }
 
-
-/* Credits: https://tobiasahlin.com/spinkit/ */
-
 .sk-chase {
     width: 40px;
     height: 40px;
@@ -41,7 +38,7 @@ body {
     display: block;
     width: 25%;
     height: 25%;
-    background-color: #972678;
+    background-color: #514f97;
     border-radius: 100%;
     animation: sk-chase-dot-before 2.0s infinite ease-in-out both;
 }
